--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
 
 }
+:root{
+    --gradient : linear-gradient(90deg, rgba(24,0,36,1) 0%, rgba(9,9,121,1) 39%, rgba(255,0,35,1) 100%);
+}
 #navbar{
     /*background-color: rgb(240, 170, 18);*/
     background: rgb(24,0,36);
@@ -19,21 +22,22 @@
 }
 #navbar ul li{
     list-style: none;
-    padding: 35px;
+    padding: 30px;
 }
 #navbar li a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 17px;
 
 }
 #navbar li a:hover{
-      color: rgb(228, 93, 93);
+      color: rgb(189, 171, 171);
 }
 #navbar ul{
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
+
     
 }
 #introSection{
@@ -58,13 +62,18 @@ div#sub{
     height: 300px;
     background-color: rgb(153, 63, 236);
     font-family: 'Lato', sans-serif;
-    padding-top: 34px;
+    padding-top: 30px;
+    padding-bottom: 5px;
     text-align: center;
     font-size: 2rem;
     color: white;
 }
 #missionSection{
-    background-color: rgb(12, 236, 98);
+    /*background-color: rgb(12, 236, 98);*/
+    background-color: white;
+    height: auto;
+    color: black;
+    
 }
 #footer{
     background-color: rgb(23, 164, 219);
@@ -72,9 +81,65 @@ div#sub{
 div.cards{
     display: flex;
     justify-content: space-around;
+    padding-bottom: 40px;
+    padding-top: 10px;
 }
 div.cardOne{
-    border: 2px solid red;
-    width: 30%;
-    height: 200px;
+    border: 10px solid #d0ad21;
+    width: 28%;
+    height: 250px;
+    border-radius: 8px;
+}
+h4{
+    padding-bottom: 9px;
+}
+
+#logo{
+    display: flex;
+    align-items: center;
+    color: white;
+}
+#logo img{
+    height: 75px;
+    filter: invert(1);
+}
+.card-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px 0px;
+}
+.card-image{
+    height: 132px;
+    
+}
+.card-image img{
+    height: inherit;
+}
+.card-content p{
+    font-size: 30px;
+}
+.cardOne h6{
+    padding: 10px;
+}
+.card-content p{
+    font-size: 16px;
+}
+/*Responsive part*/
+@media screen and (max-width:700px){
+    div.cards{
+        flex-wrap: wrap;
+    }
+    div.cardOne{
+        width: 100%;
+        margin: 10px 10px;
+    }
+    div#main,div#sub{
+        font-size: 20px;
+    }
+    section.intro{
+        height: 100px;
+    }
+
+    
 }
