--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,10 @@ html
             include ../static/style.css
     body 
         nav#navbar
-            ul 
+            ul
+                div#logo
+                    img(src="/static/logo4.png")
+                    |HDA
                 li #[a(href="/") Home] 
                 li #[a(href="/") About] 
                 li #[a(href="/") Contact us] 
@@ -13,17 +16,32 @@ html
                 li #[a(href="/") Class info]
                 li #[a(href="/") Missions]
         section#introSection.intro 
-            div#main Have us a chance to grab out the best of yours
+            div#main Let us have a chance to grab out the best of yours
             div#sub focus learn dance and bang the floor
         section#missionSection 
-            h3 Our Missions
+            h4 Our Missions
             div.cards
                 div.cardOne
-                    p card one
+                    h6 Dark perfection
+                    div.card-box
+                        div.card-image
+                            img(src="/static/img1.png") 
+                        div.card-content
+                            p This is the best card academy   
                 div.cardOne
-                    p card two
+                    h6 Dance the way you like
+                    div.card-box
+                        div.card-image
+                            img(src="/static/img2.png") 
+                        div.card-content
+                            p This is the best card academy   
                 div.cardOne
-                    p card three
+                    h6 Expert teaching
+                    div.card-box
+                        div.card-image
+                            img(src="/static/img4.png") 
+                        div.card-content
+                            p This is the best card academy   
         section#sponsorsSection.sponsors 
             | Our Sponsors
         footer#footer 
