--- a/views/index.pug
+++ b/views/index.pug
@@ -42,8 +42,13 @@ html
                             img(src="/static/img4.png") 
                         div.card-content
                             p This is the best card academy   
-        section#sponsorsSection.sponsors 
-            | Our Sponsors
+        section#sponsorsSection 
+            h4 Our Sponsors 
+            div#sponsors
+                img(src="../static/spn-logo1.png" , alt="Sponsor Image" , class="spImage")
+                img(src="../static/spn-logo2.png" , alt="Sponsor Image" , class="spImage")
+                img(src="../static/spn-logo3.png" , alt="Sponsor Image" , class="spImage")
+                img(src="../static/spn-logo4.png" , alt="Sponsor Image" , class="spImage")
         footer#footer 
             | Footer     
         script 
