--- a/views/index.pug
+++ b/views/index.pug
@@ -50,6 +50,6 @@ html
                 img(src="../static/spn-logo3.png" , alt="Sponsor Image" , class="spImage")
                 img(src="../static/spn-logo4.png" , alt="Sponsor Image" , class="spImage")
         footer#footer 
-            | Footer     
+            span.txt Copyrights 2022 DanceWebsite.com All rights reserved    
         script 
             include ../static/index.js         
