--- a/static/style.css
+++ b/static/style.css
@@ -58,9 +58,9 @@ div#sub{
     font-size: 2rem;
     font-family: 'Gideon Roman', cursive;
 }
-#sponsorsSection,#missionSection,#footer{
+#sponsorsSection,#missionSection{
     height: 300px;
-    background-color: #28202f;
+    background-color: #5f0b0b;
     font-family: 'Lato', sans-serif;
     padding-top: 30px;
     padding-bottom: 5px;
@@ -75,9 +75,7 @@ div#sub{
     color: black;
     
 }
-#footer{
-    background-color: rgb(23, 164, 219);
-}
+
 div.cards{
     display: flex;
     justify-content: space-around;
@@ -125,6 +123,9 @@ h4{
 .card-content p{
     font-size: 16px;
 }
+#sponsorsSection{
+    height: 50%;
+}
 #sponsors{
     
     max-width: 1000px;
@@ -132,9 +133,17 @@ h4{
     height: 190px;
 }
 .spImage{
-    height: 80%;
-    margin: 10px;;
-    
+    height: 60%;
+    margin: 15px 40px;
+}
+#footer{
+    background-color: black;
+    height: 40px;
+    font-size: 17px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /*Responsive part*/
 @media screen and (max-width:700px){
